Add pagination to class list resource. Update swagger docs
